turtleart.house.House.scala.error
Erreur de compilation :
House:12: error: Unmatched closing brace '}' ignored here
}
^