turtleart.house.House.scala.code
override def run() {
}

  gauche(90)
  for(i <- 1 to 3) {
    recule(100)
    gauche(120)
  }
  droite(120)
}